--- a/Roman_Agriculture.Rmd
+++ b/Roman_Agriculture.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Earth system models are climate models capable of simulating land-atmosphere feedbacks, as well as the complex biogeochemical and biogeophysical processes that drive them. These models are particularly well-suited to studying the impact of preindustrial land use on regional climate change, as they explicitly resolve the impacts of irrigation, deforestation, and agropastoral production on the flow of water and energy between the land and atmosphere. Generating realistic maps of past land use is a difficult task, however, so paleoclimatologists often rely on static, coarse-resolution estimates derived from present-day conditions. 
 
 This notebook examines agent-based modeling as an alternative to this static approach, presenting a model that can generate dynamic land-use maps that continuously contribute to and adapt to environmental variability. I use Roman North Africa as a case study here, because North Africa is a region of tight coupling between the land and atmosphere, and experienced massive agricultural expansion during the Roman Imperial period. The model simulates a population of agropastoral household agents using simple heuristics to allocate their labor to different activities in response to variable crop yields, from which complex spatial patterns of land use and land cover change may emerge. What follows is a scaled-down version of the full model, with emphasis on its basic conceptual and practical components.
-![Agents use local information and simple heuristics to allocate land, labor, and capital towards agricultural production.](images/regulatory_feedback.png)
+![Agents use local information and simple heuristics to allocate land, labor, and capital towards food production.](images/regulatory_feedback.png)
 
 ## Setup
 Before we begin, let's load some packages we'll need for this analysis. All of these packages are available on CRAN, so if you don't have any in your current R installation simply connect to the internet and run the command `install.packages("tidyverse")`.
@@ -30,11 +30,11 @@ library(tidyverse)
 
 ## Modeling framework
 
-![Multi-level modeling framework](images/agent_heirarchy.png) 
+![Conceptual illustration of the multi-level modeling framework.](images/agent_heirarchy.png) 
 
 Here we'll use the tidyverse family of R packages to setup and run the model. The tidyverse is a set of R packages that share a common API, with a focus on using functional programming to make data analysis clear and human-readable. The basic idea of running a multi-agent simulation in the tidyverse is to represent our entire population of agents as a single data frame, with each agent getting its own row, and each column encoding different agent-specific variables. This framework allows us to take advantage of vectorized functions and underlying C++ code, which together facilitate extremely efficient processing of data frames with millions of rows.
 
-Representing agents as rows in a data frame let's us use another powerful tool -- the nested data frames in the purrr package. In a nested data frame, the objects stored in one or more columns can themselves be data frames of an arbitrary size, and so on. So, for example, a data frame of "household" agents can contain columns with simple integer values such as the amount of food that household has or the number of occupants in it.
+Representing agents as rows in a data frame let's us use another powerful tool -- the nested data frames in the `purrr` package. In a nested data frame, the objects stored in one or more columns can themselves be data frames of an arbitrary size, and so on. So, for example, a data frame of "household" agents can contain columns with simple integer values such as the amount of food that household has or the number of occupants in it.
 
 ```{r}
 households <- tibble(household_number = 1:3,
@@ -62,12 +62,12 @@ unnest(households_nest) %>%
   mutate(individual_food = food_supply / n_occupants)
 ```
 
-This model uses purrr's nesting functions to create a multi-level social simulation, with individuals, households, and settlements continuously interacting. This allows us to isolate specific processes to the scales most relevant to their functioning, while ensuring computational efficiency.
+This model uses `purrr`'s nesting functions to create a multi-level social simulation, with individuals, households, and settlements continuously interacting. This allows us to isolate specific processes to the scales most relevant to their functioning, while ensuring computational efficiency.
 
 ## Parameters
-Before we get into the model code, let's define some baseline parameters that will be used throughout the rest of the model. Beside the climate and environmental datal, these parameters are the only thing that make the model "Roman". Substitute in different parameters, and you will be well on your way to simulating the pre-Industrial agricultural system of your choice.
+Before we get into the model code, let's define some baseline parameters that will be used throughout the rest of the model. These parameters are all that make the model "Roman", aside from the climate and environmental data. Substitute different parameters, and you will be well on your way to simulating the pre-Industrial agricultural system of your choice.
 
-The model will only "see" a few of these parameters (such as the wheat requirement) but we include all the variables that go into their derivation (such as calorie requirement) to preserve sanity if we ever want to change something later.
+The model will only "see" a few of these parameters (such as the wheat requirement) but we include all the variables that go into their derivation (such as caloric requirement) to preserve sanity if we ever want to change something later.
 
 Start with parameters directly related to food and food consumption.
 ```{r food_params}
@@ -121,10 +121,10 @@ ggplot(mortality_table, aes(age)) +
 ## Functions
 Now we can define all the functions that will be used in the simulation. The basic steps a houshold agent undergoes each (annual) time step are:
 
-1. **Allocate time**  Decide how much time they will spend farming vs maintaining irrigation infrastructure.
-2. **Allocate land**  Decide how much land they can need to farm, and get as much as is available.
-3. **Farm**  Harvest food from their land.
-4. **Eat** Consume some of the food they harvest, put the rest in storage.
+1. **Allocate time:**  Decide how much time they will spend farming vs maintaining irrigation infrastructure.
+2. **Allocate land:**  Decide how much land they need to farm, and get as much as is available.
+3. **Farm:**  Harvest food from their land.
+4. **Eat:** Consume some of the food they harvest and put the rest in storage.
 
 Once a household has consumed the amount of food it has farmed or stored in that year, it calculates the ratio of the food it recieved to the needs of all its occupants. Then each occupant in turn:
 
@@ -134,7 +134,7 @@ Once a household has consumed the amount of food it has farmed or stored in that
 ### Time Allocation
 The first step a household agent takes is to allocate its labor between different farming activities. Here the options are to spend time farming or maintaining irrigation infrastructure. The amount of time spent farming constrains the amount of land a household can cultivate. The amount of time spent maintaing infrastructure determines the efficiency of irrigation, and thus the proportion of available runoff a household can direct to its fields.
 
-The performance of infrastructure is piecewise linear function of labor inputs [@david2015effect]. Two parameters $\psi$ and $\epsilon$ determine how much labor is required to keep irrigaiton infrastructure working at maximum capacity. Here we parameterize $\psi \approx \epsilon$ to make the infrastructure scalable, that is the agents can spend more or less time maintaining infrastructure and still be assured of at least some water. This is the consistent with the traditional *wadi* based runoff harvesting practiced in the region.
+The performance of infrastructure is a piecewise linear function of labor inputs [@david2015effect]. Two parameters $\psi$ and $\epsilon$ determine how much labor is required to keep irrigation infrastructure working at maximum capacity. Here we parameterize $\psi \approx \epsilon$ to make the infrastructure scalable, that is the agents can spend more or less time maintaining infrastructure and still be assured of at least some water. This is consistent with the traditional *wadi* based runoff harvesting practiced in the region.
 ```{r}
 infrastructure_performance <- function(maintainance_labor, max_irrigation = 1){
   ifelse(0 <= maintainance_labor & maintainance_labor < (psi - epsilon), 0,
@@ -158,7 +158,7 @@ tibble(maintainance_labor = seq(0, 1, .001),
     theme_minimal()
 ```
 
-Given knowledge of the irrigation system and simple heuristics for relative returns to labor farming and maintaining infrastructure, the housheolds solve a constrained optimization problem [@david2015effect] to determine of the proportion of available time they should devote to each activity so as to maximize their expected utility.
+Given knowledge of the irrigation system and simple heuristics for relative returns to labor farming and maintaining infrastructure, the households solve a constrained optimization problem [@david2015effect] to determine of the proportion of available time they should devote to each activity so as to maximize their expected utility.
 ```{r}
 allocate_time <- function(households){
   total_labor = 1; j = 0.2; k = 0.6
@@ -219,7 +219,7 @@ ggplot(aes(n_occupants, land, color = Management)) +
   theme_minimal()
 ```
 
-Having determined how much land they require, households divide the available land up among themselves. As households grow in size, they can't acquire an unlimited amount of land, but are limited by the available land. The maximum available land is constrained by the size of an environmental raster grid cell (typically 1km), the proportion of that grid cell with slopes < 5 degrees, and the land taken up by other households.
+Having determined how much land they require, households divide the available land up among themselves. Households can't acquire an unlimited amount of land, and they are limited by the available land as they grow in size. The maximum available land is constrained by the size of an environmental raster grid cell (typically 1km), the proportion of that grid cell with slopes < 5 degrees, and the land taken up by other households.
 ```{r}
 allocate_land <- function(households){
   households %>% 
@@ -294,7 +294,7 @@ tibble(precipitation = seq(0, 2, .1), yield = calc_climatic_yield(precipitation)
 ```
 
 ### Eating and storage
-Finally, the households consume the harvested food. If they harvested more food than they require this year, they add the remainder to their storage. If they did not have enough food this year, they remove some food from storage. Any food that is not consumed after two years in storage is destroyed. The households update their food ratio, the ratio of food consumed to food required, as an index to use later in the demographic submodel.
+Finally, households consume the food they harvested. If they harvested more food than they require this year, they add the remainder to their storage. If they did not have enough food this year, they remove some food from storage. Any food that is not consumed after two years in storage is destroyed. The households update their food ratio, the ratio of food consumed to food required, as an index to use later in the demographic submodel.
 ```{r}
 eat <- function(households){
   households %>%
@@ -326,7 +326,7 @@ tibble(food_ratio = seq(0, 1, .001)) %>%
   labs(x = 'Food ratio', y = 'Fertility reduction', title = 'Impact of caloric defecits on fertility')
 ```
 
-We then unnest the households data frame to get a table of all the occupant agents, calculate the age and food-specific fertility rates for each individual, and run a random bernoulli trial to determine which individuals give birth. We then sum the number of births in each household, and add a new occupant of age 0 for each brith.
+We then unnest the households data frame to get a table of all the occupant agents, calculate the age and food-specific fertility rates for each individual, and run a random bernoulli trial to determine which individuals give birth. We then sum the number of births in each household, and add a new occupant of age 0 for each birth.
 ```{r reproduction}
 calculate_births <- function(households){
   households %>%
